     PR target/92545 (AVR), PR target/92950 (S390), PR c/93072, PR c/93241,
     PR c++/92859, PR fortran/84135, PR fortran/92961, PR middle-end/91226,
     PR libstdc++/93201, PR target/92692 (AArch64), PR c/93348, PR c++/91826,
     PR c++/92852.
 * Fix buffer overflow in the gcc-search-prefixed-as-ld patch.
   Addresses: #946792.
 * Refresh patches.

 -- Matthias Klose <doko@debian.org>  Mon, 03 Feb 2020 06:42:12 +0100

gcc-8 (8.3.0-26) unstable; urgency=medium

  * Update to SVN 20191201 (r278885) from the gcc-8-branch.
    - Fix PR fortran/92100, PR fortran/92629, PR driver/89014.
  * Fix applying the gcc-linaro patch.
  * Stop building -dbg packages, keep building the libstc++6-8-dbg package
    containing just the libstdc++ debug build.

 -- Matthias Klose <doko@debian.org>  Sun, 01 Dec 2019 20:22:52 +0100

gcc-8 (8.3.0-25) unstable; urgency=medium

  * Update to SVN 20191126 (r278718) from the gcc-8-branch.
    - Fix PR c/91401, PR tree-optimization/91355, PR middle-end/90840,
      PR target/90867 (x86), PR c/90898, PR middle-end/91450,
      PR c++/92384, PR tree-optimization/92056, PR tree-optimization/91665,
      PR middle-end/91001, PR middle-end/91105, PR middle-end/91106,
      PR middle-end/91623, PR other/92090, PR target/92389 (x86),
      PR target/87833 (x86), PR target/92095 (SPARC), PR fortran/92113,
      PR tree-optimization/85887, PR c++/92201, PR c++/91974,
      PR preprocessor/92296, PR fortran/92569, PR ada/92575.

 -- Matthias Klose <doko@debian.org>  Tue, 26 Nov 2019 08:34:48 +0100

gcc-8 (8.3.0-24) unstable; urgency=medium

  * Update to SVN 20191107 (r277923) from the gcc-8-branch.
    - Fix PR target/91275 (PPC), PR fortran/84487, PR libstdc++/92143,
      PR libstdc++/92059, PR target/86487, PR target/65342 (PPC),
      PR target/70010 (PPC), PR target/88167 (ARM), PR debug/91887,
      PR tree-optimization/91812, PR debug/91772, PR tree-optimization/92131,