@@ -10,6 +10,10 @@ gcc-8 (8.3.0-27) UNRELEASED; urgency=medium
  * Fix buffer overflow in the gcc-search-prefixed-as-ld patch.
    Addresses: #946792.
  * Refresh patches.
+ * Dump the config.log for the configure step when it fails.
+ * On architectures where libgcc_s.so is a symlink, replace the symlink with
+   a simple linker script.
+ * Bump standards version.
 
  -- Matthias Klose <doko@debian.org>  Mon, 03 Feb 2020 06:42:12 +0100
 
